--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "art-template": "^4.13.2",
     "bootstrap": "^3.3.7",
     "echarts": "^4.6.0",
     "express": "^4.17.1",
@@ -23,7 +24,8 @@
     "mongodb": "^2.2.22",
     "mongoose": "^5.8.4",
     "nprogress": "^0.2.0",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "twbs-pagination": "^1.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
